--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "deploy": "now && now alias",
+    "replace-paths": "sh replace-path.sh",
+    "copy-files": "cp -r build/* ../static/build/",
+    "final-build": "npm run build && npm run replace-paths && npm run copy-files",
     "start": "node scripts/start.js",
     "now-start": "serve -s ./build",
     "build": "node scripts/build.js",
@@ -16,7 +19,9 @@
   },
   "dependencies": {
     "@babel/core": "7.2.2",
+    "@reduxjs/toolkit": "^1.4.0",
     "@svgr/webpack": "4.1.0",
+    "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
@@ -37,6 +42,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
