--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -8,7 +8,7 @@
     "replace-paths": "sh replace-path.sh",
     "copy-files": "cp -r build/* ../static/build/",
     "final-build": "npm run build && npm run replace-paths && npm run copy-files",
-    "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
     "now-start": "serve -s ./build",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
@@ -73,6 +73,8 @@
     "react-select": "^3.1.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "2.3.0",
     "resolve": "1.10.0",
     "sanitize.css": "11.0.1",
