--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 version: "2"
 services:
-  db:
-    image: postgres:12
-    restart: always
-    environment:
-      POSTGRES_PASSWORD: example
-    volumes:
-      - ../db:/var/lib/postgresql/data
-      - ./postgresql.conf:/etc/postgresql/postgresql.conf
+  mongo:
+    image: mongo:4.4
     ports:
-      - 5432:5432
+      - 27017:27017/tcp
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGOEXPRESS_LOGIN}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGOEXPRESS_PASSWORD}
+  # mongo-express:
+  #   image: "mongo-express:latest"
+  #   ports:
+  #     - "8081:8081"
+  #   environment:
+  #     - ME_CONFIG_BASICAUTH_USERNAME=${MONGOEXPRESS_LOGIN}
+  #     - ME_CONFIG_BASICAUTH_PASSWORD=${MONGOEXPRESS_PASSWORD}
   # redis:
   #   image: 'bitnami/redis:latest'
   #   environment:
@@ -26,3 +30,18 @@ services:
   #   environment:
   #     - RABBITMQ_DEFAULT_USER=user
   #     - RABBITMQ_DEFAULT_PASS=password
+  # db:
+  #   image: postgres:12
+  #   restart: always
+  #   environment:
+  #     POSTGRES_PASSWORD: example
+  #   volumes:
+  #     - ../db:/var/lib/postgresql/data
+  #     - ./postgresql.conf:/etc/postgresql/postgresql.conf
+  #   ports:
+  #     - 5432:5432
+  # adminer:
+  #   image: adminer
+  #   restart: always
+  #   ports:
+  #     - 8080:8080
