--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,16 @@
 version: "2"
 services:
-  mongo:
-    image: mongo:4.4
-    ports:
-      - 27017:27017/tcp
-
-  # mongo-express:
-  #   image: "mongo-express:latest"
+  # mongo:
+  #   image: mongo:4.4
   #   ports:
-  #     - "8081:8081"
-  #   environment:
-  #     - ME_CONFIG_BASICAUTH_USERNAME=${MONGOEXPRESS_LOGIN}
-  #     - ME_CONFIG_BASICAUTH_PASSWORD=${MONGOEXPRESS_PASSWORD}
+  #     - 27017:27017/tcp
+  mongo-express:
+    image: "mongo-express:latest"
+    ports:
+      - "8081:8081"
+    environment:
+      - ME_CONFIG_BASICAUTH_USERNAME=${MONGOEXPRESS_LOGIN}
+      - ME_CONFIG_BASICAUTH_PASSWORD=${MONGOEXPRESS_PASSWORD}
   # redis:
   #   image: 'bitnami/redis:latest'
   #   environment:
