--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "knex": "^0.21.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.10.13",
+    "node-cron": "^2.0.3",
     "node-telegram-bot-api": "^0.40.0",
     "nodemailer": "^6.4.2",
     "pg": "^8.2.1",
