--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,13 @@ services:
   #     - 27017:27017/tcp
   mongo-express:
     image: "mongo-express:latest"
+    restart: always
+    depends_on:
+      - mongodb
     ports:
       - "8081:8081"
+    links:
+      - mongo
     environment:
       - ME_CONFIG_BASICAUTH_USERNAME=${MONGOEXPRESS_LOGIN}
       - ME_CONFIG_BASICAUTH_PASSWORD=${MONGOEXPRESS_PASSWORD}
