--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,18 @@
-version: "2"
+version: "3.1"
+
 services:
   mongo:
-    image: mongo:4.4
-    ports:
-      - 27017:27017/tcp
+    image: mongo
+    restart: always
     environment:
-      - MONGO_INITDB_ROOT_USERNAME: root
-      - MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+
   mongo-express:
-    image: "mongo-express:latest"
+    image: mongo-express
+    restart: always
     ports:
-      - "8081:8081"
-    depends_on:
-      - mongo
+      - 8081:8081
     environment:
-      - ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      - ME_CONFIG_MONGODB_ADMINPASSWORD: example
-  # redis:
-  #   image: 'bitnami/redis:latest'
-  #   environment:
-  #     - ALLOW_EMPTY_PASSWORD=yes
-  #   ports:
-  #     - '6379:6379'
-  # rabbit:
-  #   image: rabbitmq:3-management
-  #   stdin_open: true
-  #   tty: true
-  #   ports:
-  #     - '8080:15672'
-  #     - '5672:5672'
-  #   environment:
-  #     - RABBITMQ_DEFAULT_USER=user
-  #     - RABBITMQ_DEFAULT_PASS=password
-  # db:
-  #   image: postgres:12
-  #   restart: always
-  #   environment:
-  #     POSTGRES_PASSWORD: example
-  #   volumes:
-  #     - ../db:/var/lib/postgresql/data
-  #     - ./postgresql.conf:/etc/postgresql/postgresql.conf
-  #   ports:
-  #     - 5432:5432
-  # adminer:
-  #   image: adminer
-  #   restart: always
-  #   ports:
-  #     - 8080:8080
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
