--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^3.0.6",
     "boom": "^7.3.0",
     "cyrillic-to-translit-js": "^2.2.0",
+    "dotenv": "^8.2.0",
     "dropbox-v2-api": "^2.4.11",
     "faker": "^4.1.0",
     "handlebars": "^4.1.2",
