--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.2",
     "bcrypt": "^3.0.6",
     "boom": "^7.3.0",
+    "cheerio": "^1.0.0-rc.5",
     "cyrillic-to-translit-js": "^2.2.0",
     "dotenv": "^8.2.0",
     "dropbox-v2-api": "^2.4.11",
@@ -32,6 +33,7 @@
     "hapi-auth-jwt2": "^8.6.1",
     "hapi-swagger": "^10.0.2",
     "inert": "^5.1.3",
+    "instagram-web-api": "^2.2.2",
     "jest": "^25.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -47,6 +49,7 @@
     "redis": "^2.8.0",
     "socks-proxy-agent": "^4.0.2",
     "telegraf": "^3.34.1",
+    "tough-cookie-filestore2": "^1.0.0",
     "vision": "^5.4.4"
   },
   "devDependencies": {
