--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "axios": "^0.19.2",
     "bcrypt": "^3.0.6",
     "boom": "^7.3.0",
+    "chance": "^1.0.18",
     "cheerio": "^1.0.0-rc.5",
     "cyrillic-to-translit-js": "^2.2.0",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "dropbox-v2-api": "^2.4.11",
     "faker": "^4.1.0",
@@ -33,7 +35,9 @@
     "hapi-auth-jwt2": "^8.6.1",
     "hapi-swagger": "^10.0.2",
     "inert": "^5.1.3",
+    "instagram-private-api": "^1.43.3",
     "instagram-web-api": "^2.2.2",
+    "isomorphic-tough-cookie": "0.0.1",
     "jest": "^25.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -47,8 +51,11 @@
     "pino": "^5.12.2",
     "pino-pretty": "^3.3.0",
     "redis": "^2.8.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "socks-proxy-agent": "^4.0.2",
     "telegraf": "^3.34.1",
+    "tough-cookie": "^4.0.0",
     "tough-cookie-filestore2": "^1.0.0",
     "vision": "^5.4.4"
   },
