--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,22 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "sourceMap": false,
-    "strictNullChecks": true,
+    "lib": ["es7"],
+    "declaration": true,
+    "esModuleInterop": false,
     "module": "commonjs",
-    "target": "es2017",
+    "moduleResolution": "node",
+    "noImplicitAny": false,
+    "removeComments": true,
+    "noLib": false,
+    "allowSyntheticDefaultImports": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "ES2017",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
     "allowJs": false,
     "resolveJsonModule": true,
-    "declaration": true,
-    "declarationDir": "./dist/types/",
-    "esModuleInterop": true,
-    "baseUrl": "../../"
-  },
-  "include": ["./src/ts/**/*"],
-  "exclude": ["node_modules"]
+    "noUnusedLocals": true
+  }
 }
